...
                        app:hintTextColor="@color/subtext"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtUsername"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:lines="1"
...
                        app:hintTextColor="@color/subtext"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView14">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:lines="1"
...
                        app:hintTextColor="@color/subtext"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView15">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:lines="1"
...
                        app:hintTextColor="@color/subtext"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView16">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtConfirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="start"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:lines="1"
...
                            android:textCursorDrawable="@drawable/shape_cursor"
                            app:backgroundTint="@color/border" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSignUp"
                        style="@style/primary_button_background"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_16"
                        android:layout_marginVertical="@dimen/margin_16"
                        android:elevation="32dp"
...
