...
                app:iconTint="@color/header"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/btnSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:elevation="10sp"
                android:fontFamily="@font/tajawal_medium"
                android:text="تخطي"
...
                android:textSize="@dimen/font_16"
                app:layout_constraintBottom_toBottomOf="@+id/btnNext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnNext" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnGetStarted"
                style="@style/primary_button_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_16"
                android:layout_marginVertical="@dimen/margin_16"
                android:elevation="32dp"
...
