...
                    android:layout_marginTop="48dp"
                    android:fontFamily="@font/tajawal_bold"
                    android:text="تسجيل الدخول"
                    android:textColor="@color/header"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toStartOf="@+id/btnBack"
                    app:layout_constraintStart_toEndOf="@+id/btnAdd"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/btnAdd"
                    android:layout_width="@dimen/size_36dp"
...
